--- a/Lessons/M2_ACF_PACF_wnotes.Rmd
+++ b/Lessons/M2_ACF_PACF_wnotes.Rmd
@@ -117,7 +117,7 @@ Suppose you want to plot HP1 and HP2 on the same graph.
 plot(inflow_data[,"HP1"],type="l",col="blue",ylab="Inflow [m3/s]") 
 lines(inflow_data[,"HP2"],col="red") #Note if you use plot you generate a new graph 
                     #no need to specify type in lines() function
-title(main="Infow Series for HP1 and HP2")
+title(main="Inflow Series for HP1 and HP2")
 
 #If you want to add legend
 legend("topright",legend=c("HP1","HP2"), lty=c("solid","solid"),col=c("blue","red"))
@@ -129,6 +129,8 @@ There are other useful plots available for data visualization like histograms an
 #Graph 3: Simple Histogram
 hist(inflow_data[,"HP1"])
 hist(inflow_data[,"HP1"],breaks=30,col="gray")  #increase number of bars with breaks input
+#histograms can help with probability function
+#Distribution: log-normal distribution, no negative numbers and left-skewed
 
 #Graph 4: Scatter Plot of HP1 and HP2
 plot(inflow_data[,"HP1"],inflow_data[,"HP2"])
@@ -148,6 +150,7 @@ ggplot(inflow_data, aes(x=my_date, y=HP1)) +
 ggplot(inflow_data, aes(x=my_date, y=Inflow)) +
             geom_line(aes(y=HP1,col="HP1")) +
             geom_line(aes(y=HP2,col="HP2")) +
+            geom_line(aes(y=HP3, col="HP3"))+
             xlab("Time") +
             labs(color="Reservoir")
 ```
